# incredible-squaring-avs-rs

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  holesky_incredible_config.toml  incredible_config.toml  key.json  mainnet_incredible_config.toml
.github/workflows/: foundry.yml  integration.yml
contracts/: .env.example  foundry.toml  holesky_config.json  incredible_squaring_config.json  mainnet_config.json  remappings.txt
contracts/anvil/: create-and-claim-distribution.sh  create-operator-directed-and-claim-distribution.sh  deploy-avs-mainnet.sh  deploy-avs-save-anvil-state.sh  deploy-avs-testnet.sh  deploy-avs.sh  deploy-contracts-save-anvil-state.sh  deploy-eigenlayer.sh  start-anvil-chain-with-el-and-avs-deployed.sh  uam-permissions.sh  utils.sh
contracts/anvil/avs-and-eigenlayer-deployed-anvil-state.json/: state.json
contracts/anvil/eigenlayer-deployed-anvil-state.json/: state.json
contracts/config/incredible-squaring/: 31337.json
contracts/script/: ContractRegistry.s.sol  ContractsRegistry.s.sol  DeployEigenLayerCore.s.sol  DeployIncredibleSquaring.s.sol  DeployMockAvsRegistries.s.sol  DeployTokensStrategiesCreateQuorums.s.sol  IncredibleSquaringDeployer.s.sol  OperatorDirectedPayments.s.sol  RegisterOperatorsWithEigenlayer.s.sol  SetupDistributions.s.sol  SetupPayments.s.sol  UAMPermissions.s.sol  UpdateOperators.s.sol  WriteToContractsRegistry.s.sol
contracts/script/deployments/core/: 31337.json
contracts/script/deployments/incredible-squaring/: 1.json  17000.json  31337.json
contracts/script/holesky/: IncredibleSquaringDeployer.s.sol
contracts/script/mainnet/: IncredibleSquaringDeployer.s.sol
contracts/script/output/31337/: credible_squaring_avs_deployment_output.json
contracts/script/parsers/: ConfigsReadWriter.sol  EigenlayerContractsParser.sol  MockAvsContractsParser.sol
contracts/script/utils/: CoreDeploymentLib.sol  IncredibleSquaringDeploymentLib.sol  SetupDistributionsLib.sol  SetupPaymentsLib.sol  UpgradeableProxyLib.sol  Utils.sol  WriteToContractsRegistryLib.sol
contracts/script/utils/holesky/: TestnetCoreLib.sol  TestnetISDeploymentLib.sol
contracts/script/utils/mainnet/: MainnetCoreLib.sol  MainnetISDeploymentLib.sol
contracts/src/: ContractsRegistry.sol  IIncredibleSquaringTaskManager.sol  IncredibleSquaringServiceManager.sol  IncredibleSquaringTaskManager.sol  MockAvsServiceManager.sol
contracts/test/: IncredibleSquaringServiceManager.t.sol  SetupPaymentsLib.t.sol
contracts/test/mockData/scratch/: payment_info.json  payments.json
crates/aggregator/: Cargo.toml
crates/aggregator/src/: aggregator_impl.rs  error.rs  fake_aggregator.rs  lib.rs  rpc_server.rs  traits.rs
crates/aggregator_impl/: Cargo.toml
crates/aggregator_impl/src/: lib.rs
crates/avs/: Cargo.toml
crates/avs/src/: avs.rs  avs_builder.rs  lib.rs  traits.rs
crates/avs/src/args/: logs.rs
crates/avs/src/builder/: mod.rs
crates/bindings/: Cargo.toml  IncredibleSquaringServiceManager.json  IncredibleSquaringTaskManager.json
crates/bindings/src/: incrediblesquaringservicemanager.rs  incrediblesquaringtaskmanager.rs  lib.rs  mod.rs
crates/chainio/: Cargo.toml
crates/chainio/src/: avs_reader.rs  error.rs  fake_avs_writer.rs  lib.rs
crates/challenger/: Cargo.toml
crates/challenger/src/: error.rs  fake_challenger.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs
crates/config_incredible/: Cargo.toml
crates/config_incredible/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/operator/: Cargo.toml  operator_test_config.toml
crates/operator/src/: builder.rs  client.rs  error.rs  incredible_square_operator.rs  lib.rs  operator.rs  traits.rs
crates/operator_2/: Cargo.toml  operator_2_test_config.toml
crates/operator_2/src/: builder.rs  lib.rs
crates/operator_2_impl/: Cargo.toml
crates/operator_2_impl/src/: builder.rs  lib.rs
crates/operator_impl/: Cargo.toml
crates/operator_impl/src/: builder.rs  client.rs  incredible_square_operator.rs  lib.rs
crates/slasher/: Cargo.toml
crates/slasher/src/: lib.rs
crates/task_generator/: Cargo.toml
crates/task_generator/src/: lib.rs
crates/testing-utils/: Cargo.toml
crates/testing-utils/src/: bls_keystore_2.json  ecdsa_keystore_2.json  ecdsakeystore.json  lib.rs
crates/testing-utils/src/holesky/: bls_keystore.json  bls_keystore_2.json  ecdsa_keystore.json  ecdsa_keystore_2.json
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
scripts/: rewards-script-check.sh
