[workspace]
members = [
    "crates/aggregator",
    "crates/operator",
    "bin/incredible-squaring-avs",
    "crates/cli",
    "crates/config",
    "crates/bindings",
    "crates/avs",
    "crates/challenger",
    "crates/chainio",
    "crates/testing-utils",
    "crates/task_generator",
    "crates/operator_2",
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha"
edition = "2021"
rust-version = "1.79"
repository = "https://github.com/Layr-Labs/incredible-squaring-avs-rust"
homepage = ""
license = "Business Source License 1.1"


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"


[workspace.dependencies]
clap = "4.5.11"
eyre = "0.6.12"
tokio = { version = "1.21", default-features = false }
thiserror = "1.0.61"
ark-bn254 = { version = "0.4.0", features = [
    "curve",
], default-features = false }
futures-util = "0.3.31"
metrics = "0.24.0"
reqwest = "0.12.9"
serde_json = "1.0.120"
#alloy
alloy = { version = "0.9", features = ["full", "signer-keystore", "reqwest"] }
alloy-provider = "0.9"
serde = "1.0.203"
tracing = "0.1.40"
tempfile = "3"
rust-bls-bn254 = { git = "https://github.com/Layr-Labs/rust-bls-bn254.git", rev = "be3ef87", features = [
    "std",
] }
rand_core = "0.6"
toml = "0.8"


incredible-operator = { path = "crates/operator/", features = ["default"] }
incredible-aggregator = { path = "crates/aggregator/" }
incredible-squaring-avs = { path = "bin/incredible-squaring-avs/" }
incredible-cli-runner = { path = "crates/cli/" }
incredible-config = { path = "crates/config/" }
incredible-bindings = { path = "crates/bindings/" }
incredible-metrics = { path = "crates/metrics/" }
incredible-avs = { path = "crates/avs/" }
incredible-challenger = { path = "crates/challenger/" }
incredible-chainio = { path = "crates/chainio/" }
incredible-testing-utils = { path = "crates/testing-utils/" }
incredible-task-generator = { path = "crates/task_generator/" }
incredible-operator-2 = { path = "crates/operator_2/", features = ["default"] }

# eigensdk-rs 

eigen-common ={ path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/common/" }
eigen-chainio-txmanager = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/chainio/txmanager/" }
eigen-client-avsregistry = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/chainio/clients/avsregistry" }
eigen-client-elcontracts = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/chainio/clients/elcontracts" }
eigen-client-eth = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/chainio/clients/eth" }
eigen-client-fireblocks = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/chainio/clients/fireblocks" }
eigen-crypto-bls = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/crypto/bls/" }
eigen-crypto-bn254 = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/crypto/bn254/" }
eigen-logging = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/logging/" }
eigen-metrics = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/metrics/" }
eigen-metrics-collectors-economic = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/metrics/collectors/economic" }
eigen-metrics-collectors-rpc-calls = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/metrics/collectors/rpc_calls" }
eigen-services-avsregistry = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/services/avsregistry" }
eigen-services-blsaggregation = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/services/bls_aggregation" }
eigen-services-operatorsinfo = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/services/operatorsinfo" }
eigen-signer = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/signer/" }
eigen-testing-utils = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/testing/testing-utils" }
eigen-types = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/types/" }
eigen-utils = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/utils/" }
eigen-nodeapi = { path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/nodeapi/" }
eigen-cli ={ path = "/Users/supernovahs/Desktop/eigenlabs/eigensdk-rs/crates/eigen-cli/" }

