[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "integration tests for incredible avs"

[dependencies]
alloy = {workspace = true, features = ["node-bindings"]}
eigen-utils.workspace = true
eigen-logging.workspace = true
incredible-config.workspace = true
incredible-challenger.workspace = true
incredible-testing-utils.workspace = true
incredible-bindings.workspace = true
incredible-task-generator.workspace = true
incredible-operator = {workspace = true, features= ["integration_tests"]}
incredible-aggregator.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
eyre.workspace = true
incredible-squaring-avs.workspace = true
eigen-testing-utils.workspace = true
serial_test = "3.1.1"

