[package]
name = "integration-tests"
version = "0.0.1-alpha"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/Layr-Labs/incredible-squaring-avs-rs/integration-tests"
homepage = ""
license = "Business Source License 1.1"
description = "integration tests for incredible avs"

[dependencies]
alloy = { version = "0.9", features = ["full","signer-keystore","node-bindings"] }
eigensdk = {git = "https://github.com/Layr-Labs/eigensdk-rs", rev = "565a48a", features = ["full"]}
eigen-utils = { git = "https://github.com/Layr-Labs/eigensdk-rs",  rev = "565a48a"}
incredible-config = {path = "../crates/config/"}
incredible-challenger = {path = "../crates/challenger/"}
incredible-bindings = {path = "../crates/bindings/"}
incredible-testing-utils = {path = "../crates/testing-utils/"}
incredible-task-generator = {path = "../crates/task_generator/"}
incredible-operator = {path = "../crates/operator/" , features = ["integration_tests"]}
incredible-operator-2 = {path = "../crates/operator_2/" , features = ["integration_tests"]}
incredible-aggregator = {path = "../crates/aggregator/"}
toml = "0.8"
[dev-dependencies]
tokio = { version = "1.21", default-features = false }
eyre = "0.6.12"
incredible-squaring-avs = {path = "../bin/incredible-squaring-avs/"}
serial_test = "3.1.1"
rust-bls-bn254 = {git = "https://github.com/Layr-Labs/rust-bls-bn254.git", rev = "be3ef87", features = ["std"] }

[workspace]