[package]
name = "incredible-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer aggregator utils "
    
[lints]
workspace = true

[dependencies]
incredible-bindings.workspace = true
ark-bn254.workspace = true
eigen-types.workspace = true
serde.workspace = true
ark-serialize = "0.4.2"
hex = "0.4.3"
eigen-crypto-bls.workspace = true
incredible-chainio.workspace = true
incredible-config.workspace = true
eigen-services-operatorsinfo.workspace = true
eigen-logging.workspace = true
eigen-client-avsregistry.workspace = true
eigen-services-avsregistry.workspace = true
eigen-services-blsaggregation.workspace = true
