[package]
name = "incredible-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer aggregator utils "

[lints]
workspace = true

[dependencies]
incredible-bindings.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
ark-serialize = "0.4.2"
hex = "0.4.3"
eyre.workspace = true
incredible-chainio.workspace = true
incredible-config.workspace = true
incredible-metrics.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tokio-util = "0.7.11"

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server"] }
# uses same version as jsonrpsee
tower = { version = "0.4", features = ["full"] }
# tower-http = { workspace = true, features = [
#     "cors",
#     "compression-full",
#     "sensitive-headers",
#     "trace",
#     "timeout",
# ] }

# eigensdk-rs
eigensdk.workspace = true

[dev-dependencies]
incredible-testing-utils.workspace = true
toml.workspace = true
ark-std = { version = "0.4.0", default-features = false }
incredible-operator.workspace = true
reqwest.workspace = true
