[package]
name = "incredible-avs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible avs builder "
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true
eyre.workspace = true

#incredible
incredible-config.workspace = true
incredible-operator.workspace = true
incredible-challenger.workspace = true

#tokio
tokio.workspace = true

#futures
futures = "0.3.30"

#thiserror
thiserror.workspace = true

clap.workspace = true