[package]
name = "incredible-avs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible avs builder "
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true
eyre.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-util = "0.17.0"

#incredible
incredible-operator-2.workspace = true
incredible-config.workspace = true
incredible-operator.workspace = true
incredible-challenger.workspace = true
incredible-aggregator.workspace = true
incredible-task-generator.workspace = true
incredible-metrics.workspace = true
eigen-nodeapi.workspace = true
#tokio
tokio.workspace = true

#futures
futures = "0.3.30"

#thiserror
thiserror.workspace = true

clap.workspace = true
ntex = { version = "2.0", features = ["tokio"] }
