[package]
name = "incredible-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible squaring alloy bindings "
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
serde.workspace = true