[package]
name = "incredible-bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible squaring alloy bindings "

[lib]
name = "incredible_bindings"
path = "src/mod.rs"

[dependencies]
alloy = {workspace = true, features = ["sol-types", "contract"]}
serde.workspace = true
