[package]
name = "incredible-chainio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible squaring chainio "
    
[lints]
workspace = true

[dependencies]
incredible-config.workspace = true
eyre.workspace = true
alloy-provider.workspace = true
incredible-bindings.workspace = true
futures-util.workspace = true
alloy.workspace = true
tokio.workspace = true
thiserror.workspace = true


#eigen-rs
eigen-client-avsregistry.workspace = true
eigen-types.workspace = true
eigen-contract-bindings.workspace = true
eigen-utils.workspace = true