[package]
name = "incredible-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible-metrics"

[lints]
workspace = true

[dependencies]
metrics.workspace = true

[dev-dependencies]
eigen-metrics.workspace = true
tokio.workspace = true
reqwest.workspace = true
