[package]
name = "incredible-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "incredible-metrics"
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
incredible-config.workspace = true
thiserror.workspace = true
incredible-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true

# eigen-rs
eigensdk.workspace = true
metrics.workspace = true
metrics-util.workspace = true

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true