[package]
name = "incredible-operator-2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer operator"
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-provider.workspace = true
incredible-config.workspace = true
thiserror.workspace = true
incredible-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true
incredible-operator.workspace = true

# eigensdk-rs
eigensdk.workspace = true

incredible-metrics.workspace = true
rust-bls-bn254.workspace = true

#incredible
incredible-aggregator.workspace = true
reqwest.workspace = true

hex = {version =  "0.4.3" , features = ["alloc"]}
tokio.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
rand_core.workspace = true

[dev-dependencies]
incredible-testing-utils.workspace = true
tempfile.workspace = true
ark-ec = "0.5.0"
ark-ff = "0.5.0"

[features]
default = []
integration_tests = []