[package]
name = "incredible-task-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer operator"
    
[lints]
workspace = true

[dependencies]
alloy.workspace = true
alloy-provider.workspace = true
incredible-config.workspace = true
thiserror.workspace = true
incredible-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true
lazy_static = "1.5.0"
tokio.workspace = true
tracing.workspace = true
# eigen-rs
eigen-utils.workspace = true

