[package]
name = "incredible-task-generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer operator"

[lints]
rust.missing_docs = "allow"
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[dependencies]
alloy.workspace = true
incredible-config.workspace = true
thiserror.workspace = true
incredible-bindings.workspace = true
eyre.workspace = true
futures-util.workspace = true
lazy_static = "1.5.0"
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

# eigen-rs
eigen-common.workspace = true
eigen-utils.workspace = true
