[package]
name = "incredible-testing-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "eigen layer operator"

[lints]
workspace = true

[dependencies]
eigensdk.workspace = true
alloy.workspace = true
tracing.workspace = true
eigen-utils.workspace = true